# c-disk-rescue

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: ui-redesign.html  优化方案-改版落地与自选搬家.md  竞品分析与优化路线.md  融合方案-驱动包与孤儿profile.md  设计规范.md  需求文档.md
src/: App.vue  main.ts  router.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/rules/: rules.json
src-tauri/src/: cleaner.rs  disk.rs  lib.rs  main.rs  migrator.rs  rules.rs  scan.rs
src/api/: index.ts  types.ts
src/components/: DonutGauge.vue  TreeRow.vue
src/pages/: BigFiles.vue  Clean.vue  Home.vue  Migrate.vue  Moved.vue  Report.vue  Settings.vue  SpaceMap.vue
src/styles/: tokens.css
src/utils/: format.ts
