[package]
name = "c-disk-rescue"
version = "0.1.0"
description = "免费、无捆绑、傻瓜式的 C 盘空间治理工具"
authors = ["Silence_"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "c_disk_rescue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
sysinfo = "0.33"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
] }

# dev 模式下依赖库按 O2 编译:扫描性能接近 release,自身代码仍保持快速增量编译
[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 1

